--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       <div class="app-frame">
 
         <div class="app-data">
+          <p class="instructions">Enter your birthday here:</p>
           <form id="date-form">
             <div class="input-div">
               <label>Day</label>
