changes for mobile design

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./age.css">
+  <link rel="stylesheet" href="./age-responsive.css">
   <link rel="icon" type="image/png" sizes="32x32" href="https://avatars.githubusercontent.com/u/74315888?v=4">
   <script src="./age.js" async></script>
   <script src="https://kit.fontawesome.com/291244f1f2.js" crossorigin="anonymous"></script>
@@ -39,7 +40,6 @@
               <label>Year</label>
               <input type="number" required min="0" max="currentYear" placeholder="YYYY" name="" id="year-input">
             </div>
-            <a href=""></a>
             <div class="submit-btn">
               <button type="submit"><svg xmlns="http://www.w3.org/2000/svg" width="46" height="44" viewBox="0 0 46 44">
                   <g fill="none" stroke="#222831" stroke-width="2">
