fix max attribute in input field

--- a/index.html
+++ b/index.html
@@ -30,15 +30,15 @@
           <form id="date-form">
             <div class="input-div">
               <label>Day</label>
-              <input type="number" required min="1" max="31" placeholder="DD" name="" id="day-input">
+              <input type="number" required min="1" max="31" placeholder="DD" id="day-input">
             </div>
             <div class="input-div">
               <label>Month</label>
-              <input type="number" required min="1" max="12" placeholder="MM" name="" id="month-input">
+              <input type="number" required min="1" max="12" placeholder="MM" id="month-input">
             </div>
             <div class="input-div">
               <label>Year</label>
-              <input type="number" required min="0" max="currentYear" placeholder="YYYY" name="" id="year-input">
+              <input type="number" required min="0" placeholder="YYYY" id="year-input">
             </div>
             <div class="submit-btn">
               <button type="submit"><svg xmlns="http://www.w3.org/2000/svg" width="46" height="44" viewBox="0 0 46 44">
