--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="./age.css">
   <link rel="stylesheet" href="./age-responsive.css">
   <link rel="icon" type="image/png" sizes="32x32" href="https://avatars.githubusercontent.com/u/74315888?v=4">
-  <script src="./age.js" async></script>
+  <script src="./age.js"></script>
   <script src="https://kit.fontawesome.com/291244f1f2.js" crossorigin="anonymous"></script>
   <!-- fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
